css/Contacts.css
/*---- Contact- starts Here ----*/
.section{
	background-color: rgb(44, 52, 61);
}
.contact{
	width: 80%;
	margin: 0 auto;
	position:relative;
}
.contact-map iframe{
	width:80%;
	height:400px;
	margin: 0 auto;
	display: block;
}
.contact-top{
	background:#6f7174;
	padding:1.5em;
	width:30%;
	height:275px;
	position:absolute;
	top:10%;
	left:10%;
	box-shadow: 0px 0px 20px rgb(207, 223, 215);
	border-radius: 10px;
}
.contact-top h3{
	font-size:2.5em;
	color:white;
	font-weight:400;
	text-transform:uppercase;
	text-align:left;
	margin:0em 0 0.3em 0;
}
.contact-top-row{
	margin-top:2em;
}
.contact-top-column p{
	font-size:18px;
	line-height:1.3em;
	margin-bottom:1em;
    color:white;
}
.contact-top-column p a{
	text-decoration:underline;
    color:white;
	
}
.text-box{
	background:#efefef;
	padding:10px;
	border:1px solid #e6e6e6;
	border-radius: 3px;
	-webkit-border-radius: 3px;
	-o-border-radius: 3px;
	-ms-border-radius: 3px;
	-moz-border-radius: 3px;
} 
label.text-icon{
	width:35px;
	height:30px;
	background:url(../images/contact-icons.png)no-repeat 0px -3px;
	display: inline-block;
	vertical-align:text-top;
}
label.text-icon2{
	width:35px;
	height:30px;
	background:url(../images/contact-icons.png)no-repeat 0px -32px;
	display: inline-block;
	vertical-align:text-top;
}
label.text-icon3{
	width:35px;
	height:30px;
	background:url(../images/contact-icons.png)no-repeat 0px -66px;
	display: inline-block;
	vertical-align:text-top;
}
span.text-box input[type="text"]{
	width:70%;
	outline: none;
	border:0;
	background:#efefef;
	-webkit-appearance: none;
}
.text{
	margin:1em 0;
}
.text textarea{
	width:94%;
	background:#efefef;
	border:1px solid #e6e6e6;
	border-radius: 3px;
	-webkit-border-radius: 3px;
	-o-border-radius: 3px;
	-ms-border-radius: 3px;
	-moz-border-radius: 3px;
	-webkit-appearance: none;
	resize:none;
	outline:none;
	height:155px;
	padding:10px;
}
.text input[type="submit"]{
	text-transform:uppercase;
	color:#fff;
	font-size:15px;
	background:#77b4be;
	padding:10px;
	text-align:right;
	border:0;
	outline:none;
	-webkit-appearance: none;
	cursor: pointer;
	float: right;
	margin-right:2em;
	border-radius: 3px;
	-webkit-border-radius: 3px;
	-o-border-radius: 3px;
	-ms-border-radius: 3px;
	-moz-border-radius: 3px;
}
.text input[type="submit"]:hover{
	background:#4ba4c2;
	transition: 0.5s all;
	-webkit-transition: 0.5s all;
	-moz-transition: 0.5s all;
	-ms-transition: 0.5s all;
	-o-transition: 0.5s all;
}
/*---- Contact- Ends Here ----*/

/* Animation */

#status{
    width: 90%;
    max-width: 200px;
    margin: 0 auto;
    margin-bottom: 20px;
    padding: 3px;
    text-align: center;
    border-radius: 8px;
	font-family: sans-serif;
	font: normal;
	font-size: large;
}
#status.wait{
	background-color: rgb(133, 123, 78);
    color: rgb(180, 196, 209);
}
#status.success{
    background-color: rgb(199, 226, 206);
	color: rgb(13, 94, 85);
    animation: status 4s ease forwards;
}
#status.error{
    background-color: rgb(209, 173, 164);
    color: white;
    animation:status 4s ease forwards;
}
@keyframes status{
    0%{
        opacity: 1;
        pointer-events: all;
    }
    90%{
        opacity: 1;
        pointer-events: all;
    }
    100%{
        opacity: 0;
        pointer-events: none;
    }
}
/* -------------- */



/*--- Media Queries Starts here ---*/
@media (max-width:1024px){
	span.text-box input[type="text"] {width: 70%;}
}
@media (max-width:970px){
    .contact-top-column p a{font-size: 10px;}
}
@media (max-width:800px){
    .contact-top {height:683px;top:1%;}
	.contact-top-column p {line-height: 1.5em;margin-bottom: 0.2em;}
	 span.text-box input[type="text"] {width: 60%;}
}
@media (max-width:640px){
     .contact-top h3 {font-size: 1.8em;}
}

@media (max-width:320px){
      span.text-box input[type="text"] {width: 50%;}
}
/*--- Media Queries Starts here ---*/

